// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "Hello!",
    },
    "ja": Object {
      "hello": "こんにちは！",
    },
  },
]
`;

exports[`Multiple blocks 1`] = `
Array [
  Object {
    "en": Object {
      "hello": "Hello!",
    },
    "ja": Object {
      "hello": "こんにちは！",
    },
  },
  Object {
    "foo": "foo",
  },
]
`;
